--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ arrayvec = { default-features = false, version = "0.7" }
 borsh = { default-features = false, optional = true, version = "0.9.3" }
 byteorder = { default-features = false, optional = true, version = "1.3" }
 bytes = { default-features = false, optional = true, version = "1.0" }
-diesel = { default-features = false, optional = true, version = "1.4" }
+diesel = { default-features = false, optional = true, version = "2.0.0-rc.0" }
 num-traits = { default-features = false, features = ["i128"], version = "0.2" }
 postgres = { default-features = false, optional = true, version = "0.19" }
 rocket = { default-features = false, optional = true, version = "0.5.0-rc.1" }
